--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -74,7 +74,7 @@ window.onload = function() {
   
   // Build a system
   const ui = SwaggerUIBundle({
-    url: "http://localhost:8080/api.json",
+    url: "/api.json",
     dom_id: '#swagger-ui',
     deepLinking: true,
     presets: [
