Update index.html via compositor.io

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <li><a href="https://github.com/cdimascio/swagger-spring-functional">swagger-spring-functional</a> to validate API endpoints - provides ability to customize the error shape</li>
 <li><a href="https://github.com/cdimascio/java-dotenv">java-dotenv</a> for environment based config</li>
 </ul>
-<p><img src="https://github.com/cdimascio/kotlin-swagger-spring-functional-template/blob/master/assets/kotlin.jpeg?raw=tru" />
+<p><img src="https://github.com/cdimascio/kotlin-swagger-spring-functional-template/blob/master/assets/kotlin.png?raw=tru" />
 <img src="https://github.com/cdimascio/kotlin-swagger-spring-functional-template/blob/master/assets/spring5.png?raw=true" /></p>
 <p>The Swagger specification is defined in <code>main/resources/static/api.json</code> and is used to drive both the interactive doc and api validation.</p>
 <h2>Usage</h2>
