Update index.html via compositor.io

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <li>Interactive API documentation via <a href="https://swagger.io/swagger-ui/">Swagger UI</a></li>
 <li>Automatic linting via <a href="ktlint.github.io">ktlint</a></li>
 </ul>
-<p>Request validation and interactive documentation are based on a Swagger v2 API definition. The definition is located at <code>main/resources/static/api.json</code>.</p>
+<p>Request validation and interactive documentation are based on an OpenApi 3.0 or Swagger v2 API specification. The specification is located at <code>main/resources/static/api.yaml</code>.</p>
 <h2>Usage</h2>
 <p>clone this repo</p>
 <h2>Build</h2>
