Update index.html via compositor.io

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 <li><a href="https://github.com/cdimascio/openapi-spring-webflux-validator">openapi-spring-webflux-validator</a> to validate API endpoints. It also provides ability to customize the error shape</li>
 <li><a href="https://github.com/cdimascio/java-dotenv">java-dotenv</a> for environment based config</li>
 </ul>
-<p><img src="https://github.com/cdimascio/kotlin-swagger-spring-functional-template/blob/master/assets/kotlin.png?raw=tru" />
-<img src="https://github.com/cdimascio/kotlin-swagger-spring-functional-template/blob/master/assets/spring5.png?raw=true" /></p>
+<p>
+  <img src="https://raw.githubusercontent.com/cdimascio/kotlin-swagger-spring-functional-template/master/assets/logo.png" />
+</p>
+
 <h3>What's included?</h3>
 <ul>
 <li>Automatic request validation via <a href="https://github.com/cdimascio/openapi-spring-webflux-validator">openapi-spring-webflux-validator</a></li>
