Update index.html via compositor.io

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 <pre>./gradlew clean distZip unzip</pre><p>Output artifact located at <code>build/unpacked/dist</code></p>
 <h2>Run the standalone dist</h2>
 <p>Create an unpacked dist. See the <a href="#dist">Dist</a> section above. Then run it</p>
-<pre>cp build/unpacked/dist $HOME
-$HOME/kotlin-swagger-spring-functional-1.0.0/bin/kotlin-swagger-spring-functional</pre><h2>Try It!</h2>
+<pre>cp build/unpacked/dist $HOME/kotlin-swagger-spring-functional-1.0.0/bin/kotlin-swagger-spring-functional</pre><h2>Try It!</h2>
 <p><a href="#run">Run</a> the app or run the <a href="#run-the-standalone-dist">standalone dist</a>, then:</p>
 <pre>curl http://localhost:8080/api/users</pre><h3>Try the example endpoints (with swagger validation)</h3>
 <p>POST to <code>/users</code> with a <em>valid</em> request body</p>
