Update index.html via compositor.io

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
 </ul>
 <p>Request validation and interactive documentation are based on an OpenApi 3.0 or Swagger v2 API specification. The specification is located at <code>main/resources/static/api.yaml</code>.</p>
 <h2>Install</h2>
-<h4>Get the template code</h4>
-<pre>git clone --bare https://github.com/cdimascio/kotlin-swagger-spring-functional-template &lt;your-annotator-project-name&gt;
-cd &lt;your-annotator-project-name&gt;</pre><h4>(Optional): Create a git repo to track your code</h4>
-<pre>git push --mirror https://github.com/&lt;org&gt;/&lt;your-annotator-project-name&gt;</pre><h2>Build</h2>
+<p>Clone this repo</p>
+<h2>Build</h2>
 <pre>./gradlew build</pre><h2>Run</h2>
 <pre>./gradlew run</pre><h2>Lint</h2>
 <pre>## show lint errors
